Fix promoting photo going out of bounds on resize

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -64,6 +64,7 @@ header ul {
 .pocket-shot {
   object-fit: contain;
   max-width: 500px;
+  min-width: 0;
   /*align-items: center;
   width: auto;
   flex: 1 1 auto; */
